<resources>
	<string name="empty_list">This list is empty</string>
	<string name="error_happened_try_again">An error happened. Please try again.</string>

	<string name="app_name">Company Info UK</string>
	<string name="search">Search</string>
	<string name="favourites">Favourites</string>
	<string name="remove_favourites">Remove Favourites</string>
	<string name="privacy_policy">Privacy policy</string>
	<string name="company_number">Company number</string>
	<string name="incorporated_on">Incorporated on %1$s</string>
	<string name="office_address">Office address</string>
	<string name="recent_searches">Recent Searches</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="delete_recent_searches">Delete recent searches</string>
	<string name="are_you_sure_you_want_to_delete_all_recent_searches">Are you sure you want to delete all recent searches?</string>
	<string name="button_undo">undo</string>
	<string name="company_nature_of_business">Nature of business</string>
	<string name="no_data">No data</string>
	<string name="company_accounts">Accounts</string>
	<string name="company_accounts_formatted_text">Last %1$s account made up to %2$s</string>
	<string name="company_annual_returns">Annual Returns</string>
	<string name="company_annual_returns_formatted_text">Last made up to %1$s</string>
	<string name="company_accounts_not_found">Accounts not found</string>
	<string name="company_annual_returns_not_found">Annual returns not found</string>
	<string name="no_charges">No Charges</string>
	<string name="no_insolvency">No insolvency</string>
	<string name="no_person_with_significant_control">No person with significant control</string>
	<string name="filing_history">Filing history</string>
	<string name="filing_history_details">Filing history details</string>
	<string name="insolvency">Insolvency</string>
	<string name="insolvency_details">Insolvency details</string>
	<string name="charges">Charges</string>
	<string name="charge_details_title">Charge details</string>
	<string name="officers">Officers</string>
	<string name="officer_details">Officer details</string>
	<string name="person_details">Person details</string>
	<string name="persons_with_significant_control">Persons with significant control</string>
	<string name="company_details">Company details</string>
	<string name="charge_details_delivered_on">Delivered on</string>
	<string name="charge_details_status">Status</string>
	<string name="charge_details_contains_floating_charge">Contains floating charge</string>
	<string name="charge_details_floating_charge_covers_all">Floating charge covers all</string>
	<string name="charge_details_contains_negative_pledge">Contains negative pledge</string>
	<string name="charge_details_contains_fixed_charge">Contains fixed charge</string>
	<string name="charge_details_satisfied_on">Satisfied on</string>
	<string name="charge_details_persons_entitled">Persons entitled</string>
	<string name="charge_details_filing_type">Filing type</string>
	<string name="insolvency_details_address">Address</string>
	<string name="insolvency_details_role">Role</string>
	<string name="insolvency_details_ceased_to_act_on">Ceased to act on</string>
	<string name="insolvency_details_name">Name</string>
	<string name="insolvency_details_appointed_on">Appointed on</string>
	<string name="officer_details_country_of_residence">Country of residence</string>
	<string name="officer_details_name">Name</string>
	<string name="officer_details_appointed_on">Appointed on</string>
	<string name="officer_details_nationality">Nationality</string>
	<string name="officer_details_occupation">Occupation</string>
	<string name="officer_details_date_of_birth">Date of birth</string>
	<string name="person_details_notified_on">Notified on</string>
	<string name="person_details_registration_number">Registration number</string>
	<string name="person_details_place_registered">Place registered</string>
	<string name="person_details_natures_of_control">Natures of control</string>
	<string name="officer_details_unknown">Unknown</string>
	<string name="officer_details_appointments">Appointments</string>
	<string name="company_name">Company name</string>
	<string name="company_status">Company status</string>
	<string name="officer_appointments_title">Officer appointments</string>
	<string name="officer_appointments_resigned_on">Resigned on</string>
	<string name="officer_appointments_role">Role</string>
	<string name="officer_appointments_appointments">Appointments</string>
	<string name="title_activity_maps">Map</string>
	<string name="company_address_show_on_map">Show on map</string>
	<string name="transactions">Transactions</string>
	<string name="type">Type</string>
	<string name="date">Date</string>
	<string name="search_menu_filter">Filter</string>
	<string name="category">Category</string>
	<string name="subcategory">Subcategory</string>
	<string name="description">Description</string>
	<string name="pages">Pages</string>
	<string name="could_not_complete_search">Could not complete search. Check your network connection.</string>
	<string name="could_not_retrieve_company_info">Could not retrieve company information. Check your network connection.</string>
	<string name="could_not_retrieve_filing_history_info">Could not retrieve filing history information. Check your network connection.</string>
	<string name="could_not_retrieve_filing_history_document_info">Could not retrieve filing history document. Check your network connection.</string>
	<string name="could_not_retrieve_charges_info">Could not retrieve charges information. Check your network connection.</string>
	<string name="could_not_retrieve_officer_info">Could not retrieve officer information. Check your network connection.</string>
	<string name="could_not_retrieve_officer_appointments_info">Could not retrieve officer appointments information. Check your network connection.</string>
	<string name="could_not_retrieve_insolvency_info">Could not retrieve insolvency information. Check your network connection.</string>
	<string name="could_not_retrieve_persons_info">Could not retrieve significant persons information. Check your network connection.</string>
	<string name="insolvency_dates">Dates</string>
	<string name="insolvency_practitioners">Practitioners</string>
	<string name="appbar_scrolling_view_behavior" translatable="false">	com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
	<string name="no_recent_searches">You have no recent searches. Start by searching for a company above!</string>
	<string name="no_search_result">Your search did not return any companies. Please try another one</string>
	<string name="content_description_error_image">Error image</string>
	<string name="content_description_empty_image">Empty image</string>
	<string name="filing_history_details_no_pdf_reader">Couldn\'t find PDF reader. Please install one from Google Play.</string>
	<string name="filing_history_details_wont_save_pdf">The PDF file won\'t be saved to the SD card.</string>
	<string-array name="search_filter_options">
		<item>All</item>
		<item>Active</item>
		<item>Liquidation</item>
		<item>Open</item>
		<item>Dissolved</item>
	</string-array>
	<string-array name="filing_history_categories">
		<item>All</item>
		<item>gazette</item>
		<item>confirmation-statement</item>
		<item>accounts</item>
		<item>annual returns</item>
		<item>officers</item>
		<item>address</item>
		<item>capital</item>
		<item>insolvency</item>
		<item>other</item>
		<item>incorporation</item>
		<item>change of constitution</item>
		<item>auditors</item>
		<item>resolution</item>
		<item>mortgage</item>
	</string-array>
</resources>
