<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context="com.babestudios.companyinfouk.companies.ui.CompaniesActivity">

	<com.babestudios.base.view.ParallaxAppBarView
		android:id="@+id/pabCompany"
		android:layout_width="match_parent"
		android:layout_height="@dimen/appBarHeight"
		android:theme="@style/AppTheme.AppBarOverlay"
		app:imageViewSrc="@drawable/bg_company" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/fabCompanyFavorite"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:tint="@color/colorOnSecondary"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/viewMarginLarge"
		android:contentDescription="@string/fab_toggle_favourite"
		app:srcCompat="@drawable/ic_favorite" />

	<com.babestudios.base.view.MultiStateView
		android:id="@+id/msvCompany"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		app:msv_emptyView="@layout/multi_state_view_empty"
		app:msv_errorView="@layout/multi_state_view_error"
		app:msv_loadingView="@layout/multi_state_view_progress"
		app:msv_viewState="content">

		<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:divider="?android:listDivider"
				android:orientation="vertical"
				android:showDividers="middle"
				tools:ignore="UseCompoundDrawables">

				<TextView
					android:id="@+id/tvCompanyNumber"
					style="@style/Text.Bold"
					android:layout_marginBottom="@dimen/viewMargin"
					android:transitionName="companyNumber"
					tools:text="08762819" />

				<TextView
					android:id="@+id/tvCompanyIncorporated"
					style="@style/Text"
					android:layout_marginTop="@dimen/viewMargin"
					android:layout_marginBottom="@dimen/viewMargin"
					tools:text="Incorporated on 2016 August 3" />

				<com.babestudios.companyinfouk.core.views.AddressView
					android:id="@+id/addressViewCompany"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:title="@string/office_address"
					app:addressLine1="Hurst House"
					app:addressLine2="Clay Lane"
					app:locality="Redhill"
					app:postCode="RH1 4EG"
					app:region="Surrey"
					app:country="England"/>

				<com.babestudios.base.view.TwoLineView
					android:id="@+id/twoLineCompanyNatureOfBusiness"
					style="@style/TwoLine"
					app:textFirst="@string/company_nature_of_business"
					tools:textSecond="77120 Renting and leasing of trucks and other heavy vehicles" />

				<com.babestudios.base.view.TwoLineView
					android:id="@+id/twoLineCompanyAccounts"
					style="@style/TwoLine"
					app:textFirst="@string/company_accounts"
					tools:textSecond="Last DORMANT account made up to 29 February 2016" />

				<com.babestudios.base.view.SingleLineView
					android:id="@+id/llCompanyFilings"
					style="@style/SingleLine"
					app:slvImageViewContentDescription="@string/filing_history"
					app:slvImageViewSrc="@drawable/ic_company_filing_history"
					app:slvText="@string/filing_history" />

				<com.babestudios.base.view.SingleLineView
					android:id="@+id/llCompanyInsolvency"
					style="@style/SingleLine"
					app:slvImageViewContentDescription="@string/insolvency"
					app:slvImageViewSrc="@drawable/ic_company_insolvency"
					app:slvText="@string/insolvency" />

				<com.babestudios.base.view.SingleLineView
					android:id="@+id/llCompanyCharges"
					style="@style/SingleLine"
					app:slvImageViewContentDescription="@string/charges"
					app:slvImageViewSrc="@drawable/ic_company_charges"
					app:slvText="@string/charges" />

				<com.babestudios.base.view.SingleLineView
					android:id="@+id/llCompanyOfficers"
					style="@style/SingleLine"
					app:slvImageViewContentDescription="@string/officers"
					app:slvImageViewSrc="@drawable/ic_company_officers"
					app:slvText="@string/officers" />

				<com.babestudios.base.view.SingleLineView
					android:id="@+id/llCompanyPersons"
					style="@style/SingleLine"
					app:slvImageViewContentDescription="@string/persons_with_significant_control"
					app:slvImageViewSrc="@drawable/ic_company_persons_with_control"
					app:slvText="@string/persons_with_significant_control" />

			</LinearLayout>
		</androidx.core.widget.NestedScrollView>
	</com.babestudios.base.view.MultiStateView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
