<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context="com.babestudios.companyinfouk.companies.ui.CompaniesActivity">

	<com.babestudios.base.view.ParallaxAppBarView
		android:id="@+id/pabCompany"
		android:layout_width="match_parent"
		android:layout_height="@dimen/appBarHeight"
		android:theme="@style/AppTheme.AppBarOverlay"
		app:imageViewSrc="@drawable/bg_company" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/fabCompanyFavorite"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/screenMargin"
		android:contentDescription="@string/fab_toggle_favourite"
		app:srcCompat="@drawable/ic_favorite" />

	<com.babestudios.base.view.MultiStateView
		android:id="@+id/msvCompany"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		app:msv_emptyView="@layout/multi_state_view_empty"
		app:msv_errorView="@layout/multi_state_view_error"
		app:msv_loadingView="@layout/multi_state_view_progress"
		app:msv_viewState="content">

		<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/appbar"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				tools:ignore="UseCompoundDrawables">

				<TextView
					android:id="@+id/tvCompanyNumber"
					style="@style/Text"
					android:layout_marginBottom="@dimen/viewMargin"
					android:transitionName="companyNumber"
					tools:text="08762819" />

				<include layout="@layout/divider" />

				<TextView
					android:id="@+id/tvCompanyIncorporated"
					style="@style/Text"
					android:layout_marginTop="@dimen/viewMargin"
					android:layout_marginBottom="@dimen/viewMargin"
					tools:text="Incorporated on 2016 August 3" />

				<include layout="@layout/divider" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<TextView
						style="@style/Text.H6"
						android:layout_width="0dp"
						android:layout_weight="1"
						android:text="@string/office_address" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/btnShowOnMap"
						style="@style/Button"
						android:layout_marginTop="16dp"
						android:layout_marginEnd="@dimen/screenMargin"
						android:text="@string/company_address_show_on_map" />

				</LinearLayout>

				<TextView
					android:id="@+id/lblCompanyAddressLine1"
					style="@style/Text"
					tools:text="3 Hendon Place" />

				<TextView
					android:id="@+id/lblCompanyAddressLine2"
					style="@style/Text"
					android:visibility="gone" />

				<TextView
					android:id="@+id/lblCompanyAddressLocality"
					style="@style/Text"
					tools:text="Kingston" />

				<TextView
					android:id="@+id/lblCompanyAddressPostalCode"
					style="@style/Text"
					android:layout_marginBottom="@dimen/viewMargin"
					tools:text="KT6 2LP" />

				<include layout="@layout/divider" />

				<TextView
					style="@style/Text.H6"
					android:text="@string/company_nature_of_business" />

				<TextView
					android:id="@+id/lblCompanyNatureOfBusiness"
					style="@style/Text"
					android:layout_marginBottom="@dimen/viewMargin"
					tools:text="Growing of rice" />

				<include layout="@layout/divider" />

				<TextView
					style="@style/Text.H6"
					android:text="@string/company_accounts" />

				<TextView
					android:id="@+id/lblCompanyAccounts"
					style="@style/Text"
					android:layout_marginBottom="@dimen/viewMargin"
					tools:text="Last DORMANT account made up to 29 February 2016" />

				<include layout="@layout/divider" />

				<TextView
					style="@style/Text.H6"
					android:text="@string/company_annual_returns" />

				<TextView
					android:id="@+id/lblCompanyAnnualReturns"
					style="@style/Text"
					android:layout_marginBottom="@dimen/viewMargin"
					tools:text="Last made up to 13 February 2016" />

				<include layout="@layout/divider" />

				<com.babestudios.companyinfouk.core.views.SingleLineView
					android:id="@+id/llCompanyFilings"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:clickable="true"
					android:focusable="true"
					app:imageViewContentDescription="@string/filing_history"
					app:imageViewSrc="@drawable/ic_company_filing_history"
					app:text="@string/filing_history" />

				<com.babestudios.companyinfouk.core.views.SingleLineView
					android:id="@+id/llCompanyInsolvency"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:clickable="true"
					android:focusable="true"
					app:imageViewContentDescription="@string/insolvency"
					app:imageViewSrc="@drawable/ic_company_insolvency"
					app:text="@string/insolvency" />

				<com.babestudios.companyinfouk.core.views.SingleLineView
					android:id="@+id/llCompanyCharges"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:clickable="true"
					android:focusable="true"
					app:imageViewContentDescription="@string/charges"
					app:imageViewSrc="@drawable/ic_company_charges"
					app:text="@string/charges" />

				<com.babestudios.companyinfouk.core.views.SingleLineView
					android:id="@+id/llCompanyOfficers"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:clickable="true"
					android:focusable="true"
					app:imageViewContentDescription="@string/officers"
					app:imageViewSrc="@drawable/ic_company_officers"
					app:text="@string/officers" />

				<com.babestudios.companyinfouk.core.views.SingleLineView
					android:id="@+id/llCompanyPersons"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:clickable="true"
					android:focusable="true"
					app:imageViewContentDescription="@string/persons_with_significant_control"
					app:imageViewSrc="@drawable/ic_company_persons_with_control"
					app:text="@string/persons_with_significant_control" />

			</LinearLayout>
		</androidx.core.widget.NestedScrollView>
	</com.babestudios.base.view.MultiStateView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
