<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
													 xmlns:app="http://schemas.android.com/apk/res-auto"
													 xmlns:tools="http://schemas.android.com/tools"
													 android:layout_width="match_parent"
													 android:layout_height="match_parent"
													 android:fitsSystemWindows="true"
													 tools:context="com.babestudios.companyinfouk.ui.chargedetails.ChargeDetailsActivity">


	<com.babestudios.base.view.ParallaxAppBarView
		android:id="@+id/pabChargeDetails"
		android:layout_width="match_parent"
		android:layout_height="@dimen/appbar_height"
		android:theme="@style/AppTheme.AppBarOverlay"
		app:imageViewSrc="@drawable/bg_charges"/>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_horizontal_margin"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_begin="@dimen/constraint_guide_begin"/>

		<TextView
			android:id="@+id/lblChargeDetailsDeliveredOn"
			style="@style/Text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/activity_horizontal_margin"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:text="@string/charge_details_delivered_on"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<TextView
			android:id="@+id/tvChargeDetailsDeliveredOn"
			style="@style/Text.Title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/activity_horizontal_margin"
			app:layout_constraintBaseline_toBaselineOf="@+id/lblChargeDetailsDeliveredOn"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintLeft_toLeftOf="@+id/guideline"
			app:layout_constraintRight_toRightOf="parent"
			tools:text="2016-11-08"/>

		<TextView
			android:id="@+id/lblChargeDetailsStatus"
			style="@style/Text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/activity_horizontal_margin"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:text="@string/charge_details_status"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/lblChargeDetailsDeliveredOn"/>

		<TextView
			android:id="@+id/tvChargeDetailsStatus"
			style="@style/Text.Title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/activity_horizontal_margin"
			app:layout_constraintBaseline_toBaselineOf="@+id/lblChargeDetailsStatus"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintLeft_toLeftOf="@+id/guideline"
			app:layout_constraintRight_toRightOf="parent"
			tools:text="Outstanding"/>

		<TextView
			android:id="@+id/lblChargeDetailsContainsFloatingCharge"
			style="@style/Text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/activity_horizontal_margin"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:text="@string/charge_details_contains_floating_charge"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvChargeDetailsStatus"/>

		<TextView
			android:id="@+id/tvChargeDetailsContainsFloatingCharge"
			style="@style/Text.Title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/activity_horizontal_margin"
			app:layout_constraintBaseline_toBaselineOf="@+id/lblChargeDetailsContainsFloatingCharge"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintLeft_toLeftOf="@+id/guideline"
			app:layout_constraintRight_toRightOf="parent"
			tools:text="Yes"/>

		<TextView
			android:id="@+id/lblChargeDetailsFloatingChargeCoversAll"
			style="@style/Text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/activity_horizontal_margin"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:text="@string/charge_details_floating_charge_covers_all"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvChargeDetailsContainsFloatingCharge"/>

		<TextView
			android:id="@+id/tvChargeDetailsFloatingChargeCoversAll"
			style="@style/Text.Title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/activity_horizontal_margin"
			app:layout_constraintBaseline_toBaselineOf="@+id/lblChargeDetailsFloatingChargeCoversAll"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintLeft_toLeftOf="@+id/guideline"
			app:layout_constraintRight_toRightOf="parent"
			tools:text="Yes"/>

		<TextView
			android:id="@+id/lblChargeDetailsContainsNegativePledge"
			style="@style/Text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/activity_horizontal_margin"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:text="@string/charge_details_contains_negative_pledge"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvChargeDetailsFloatingChargeCoversAll"/>

		<TextView
			android:id="@+id/tvChargeDetailsContainsNegativePledge"
			style="@style/Text.Title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/activity_horizontal_margin"
			app:layout_constraintBaseline_toBaselineOf="@+id/lblChargeDetailsContainsNegativePledge"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintLeft_toLeftOf="@+id/guideline"
			app:layout_constraintRight_toRightOf="parent"
			tools:text="Yes"/>

		<TextView
			android:id="@+id/lblChargeDetailsContainsFixedCharge"
			style="@style/Text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/activity_horizontal_margin"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:text="@string/charge_details_contains_fixed_charge"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvChargeDetailsContainsNegativePledge"/>

		<TextView
			android:id="@+id/tvChargeDetailsContainsFixedCharge"
			style="@style/Text.Title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/activity_horizontal_margin"
			app:layout_constraintBaseline_toBaselineOf="@+id/lblChargeDetailsContainsFixedCharge"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintLeft_toLeftOf="@+id/guideline"
			app:layout_constraintRight_toRightOf="parent"
			tools:text="Yes"/>

		<TextView
			android:id="@+id/lblChargeDetailsSatisfiedOn"
			style="@style/Text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:text="@string/charge_details_satisfied_on"
			android:visibility="gone"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvChargeDetailsContainsFixedCharge"/>

		<TextView
			android:id="@+id/tvChargeDetailsSatisfiedOn"
			style="@style/Text.Title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/activity_horizontal_margin"
			app:layout_constraintLeft_toLeftOf="@+id/guideline"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvChargeDetailsContainsFixedCharge"
			tools:text="2016-12-18"/>

		<TextView
			android:id="@+id/lblChargeDetailsPersonsEntitled"
			style="@style/Text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/activity_horizontal_margin"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:text="@string/charge_details_persons_entitled"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvChargeDetailsSatisfiedOn"/>

		<TextView
			android:id="@+id/tvChargeDetailsPersonsEntitled"
			style="@style/Text.Title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/activity_horizontal_margin"
			app:layout_constraintBaseline_toBaselineOf="@+id/lblChargeDetailsPersonsEntitled"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintLeft_toLeftOf="@+id/guideline"
			app:layout_constraintRight_toRightOf="parent"
			tools:text="Barclays Bank PLC"/>

		<View
			android:id="@+id/divChargeDetails"
			android:layout_width="0dp"
			android:layout_height="1dp"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:background="@color/colorDivider"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvChargeDetailsPersonsEntitled"/>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rvChargeDetails"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingBottom="@dimen/view_margin_small"
			android:scrollbars="vertical"
			app:layout_constraintTop_toBottomOf="@+id/divChargeDetails"/>
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
